# alchemist-transcriber

./: .env.example  .gitignore  README.md  SKILL.md  pyproject.toml
enrollments/: README.md
src/: audio_preprocess.py  check_enrollment.py  cli.py  diar_types.py  enrollment_util.py  run_logging.py  torch_pipeline.py  transcript_fixes.py
